# ptt_stock_vane_api

./: .env.example  .gitignore  AI_data_analysis_journey.md  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  selenium.mov  split_data.py
config/config/: settings.py  urls.py
config/data/: commands_have_stock.csv  expand_dict.py  piece_1941.csv  piece_4000.csv  piece_6000.csv  prompt  ptt_stock_targets.csv  result_piece_4000.csv  result_piece_5000.csv  result_piece_6000.csv  stock_dataset.csv  stock_infos.csv  stock_infos.ipynb  stock_merge.csv  stock_merge.ipynb  stock_nicknames.csv  stock_targets.csv
config/ptt_stock_crawler/: apps.py  views.py
config/ptt_stock_crawler/management/commands/: analyze_stock_comments.py  analyze_stock_targets_from_comments.py  embed_stock_targets.py  extract_company_levenshtein.py  show_market_overview.py  update_stock_paragraphs.py  (+2 more)
config/ptt_stock_crawler/services/: analyze_ptt_commet_stock_target.py  analyze_stock_comments.py  embed_stock_targets.py  extract_company_levenshtein.py  selenium_gpt.ipynb  show_market_overview.py  update_ptt_name_id.py  update_ptt_stock_paragraphs.py  update_ptt_stock_sentiments.py  update_stock_paragraphs.py  update_stock_sentiment.py  update_stock_targets.py
config/ptt_stock_vane_api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
config/ptt_stock_vane_api/migrations/: 0001_initial.py  0002_pttstockparagraphs_page_url.py  0003_delete_pttstockdict.py  0004_pttstockparagraphs_done_analyze.py
prompt/: 1940_result_1_400.csv  gpt_analysis_result.csv  piece_1940.csv  piece_1940_result.csv  piece_5000.csv  prompt  prompt_claude  ptt_stock_targets.csv  result_piece_1940.csv  result_piece_1941.csv
