[tool.poetry]
name = "ptt-stock-vane-api"
version = "0.1.0"
description = ""
authors = ["uncleben006"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.1"
requests = "^2.31.0"
bs4 = "^0.0.2"
cachetools = "^5.3.3"
transformers = "^4.41.2"
torch = "^2.3.0"
huggingface-hub = "^0.23.2"
spacy = "^3.7.4"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
line-bot-sdk = "^3.11.0"
langchain = "^0.2.1"
langchain-openai = "^0.1.8"
langchain-community = "^0.2.1"
pandas = "^2.2.2"
qdrant-client = "^1.9.1"
langchain-qdrant = "^0.1.0"
jupyter = "^1.0.0"
textdistance = "^4.6.2"
beautifulsoup4 = "^4.12.3"
selenium = "^4.22.0"
undetected-chromedriver = "^3.5.5"
django-extensions = "^3.2.3"
ipython = "^8.26.0"
notebook = "^7.2.1"
pyautogui = "^0.9.54"
pywinctl = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
